--- a/create.html
+++ b/create.html
@@ -25,9 +25,7 @@
       <label>Choose a user
          <select class="selector">
           {{#each users}}
-          <option value="{{id}}">
-            {{id}}
-          </option>
+          <option class="beerID" value="{{id}}">User: {{id}}</option>
           {{/each}}
         </select>
       </label>
