--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <nav>
       <div class="nav-wrapper">
         <a href="index.html" class="brand-logo center">Users and Beers</a>
+        <ul id="nav-mobile">
+          <li><a href="create.html">Create</a></li>
+        </ul>
       </div>
     </nav>
   </header>
