--- a/create.html
+++ b/create.html
@@ -40,7 +40,8 @@
       <input class="beerABV" type="text" value="" />
       <label>Beer Image URL:</label>
       <input class="beerImage" type="text" value="" />
-      <button type="submit" class="submit" value="">Submit</button>
+      <button class="btn waves-effect" type="submit">Submit
+      </button>
     </form>
 
   </script>
